[package]
name = "ResilientGame"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

[dependencies]
bevy = { version = "0.13.2" }
bevy_egui = "0.27.0"
bevy_health_bar3d = "3.2.*"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.8.5"
rand_chacha = "0.3.1"



# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 0 # 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 0 # 3


# Enable more optimization in release mode at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Significantly slows compile times, marginal improvements.
#codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slightly slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"

